CORE-1958 - Fixed flip container not being visible in firefox until clicked on

--- a/css/flip.less
+++ b/css/flip.less
@@ -24,7 +24,6 @@
 		position: absolute;
 		transition: transform 0.6s;
 		width: 100%;
-		overflow: hidden;
 	}
 
 	.flip-container.rotateY {
